better way to prevent white flicker during wallet detail scroll

--- a/src/sass/views/walletDetails.scss
+++ b/src/sass/views/walletDetails.scss
@@ -120,11 +120,12 @@
 
     .amount-bg {
       content: '';
-      top: -1000px;
+      bottom: 0;
       left: 0;
       position: absolute;
-      height: 2000px;
       width: 100%;
+      height: 100px;
+      transform: translateY(100px);
     }
   }
   .amount {
